Fixed overflow issues on mobile and adopted expressive-code to display code blocks

--- a/src/styles/_blog.scss
+++ b/src/styles/_blog.scss
@@ -92,27 +92,6 @@
         border-color: t($text);
       }
     }
-    code {
-      font-family: $font-code;
-      font-size: 1rem;
-
-      @include mobile {
-        font-size: 0.8rem;
-        padding: 0.1rem 0.2rem;
-      }
-    }
-    pre {
-      border-radius: 0.5rem;
-      word-break: break-word;
-      word-wrap: break-word;
-      white-space: pre-wrap; /* css-3 */
-      white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
-      white-space: -pre-wrap; /* Opera 4-6 */
-      white-space: -o-pre-wrap; /* Opera 7 */
-      word-wrap: break-word; /* Internet Explorer 5.5+ */
-      padding: 0.5rem 1rem;
-      margin-bottom: 2 * $grid-unit;
-    }
     div.line {
       display: table-row;
     }
